# ng-imager

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
dev/architecture/: index.html
docs/: index.md
docs/api/: index.md
docs/dev/: architecture.md
docs/user/: config.md  hdf5.md  quickstart.md
examples/configs/: phits_usrdef_simple.toml  ptb_fast.toml  ptb_full.toml
examples/imaging_datasets/NOVO_experiment_DT_at_PTB/: README.md
examples/imaging_datasets/PHITS_simple_ng_source/: README.md  novo-example.inp  usrdef.out  usrdef_ragged_out.h5  usrdef_with-rxn-info.out
examples/imaging_datasets/PHITS_toy_line_source/: README.md  parallel_3d2t.inp  usrdef.out
examples/imaging_datasets/PHITS_toy_ring_source/: README.md  parallel_3d2t.inp
legacy/: README.md  expNOVO_imager_legacy.py  image_settings_PHITS.txt  image_settings_PTB-experiment.txt
src/ngimager/cli/: phits_smoke.py  viz.py
src/ngimager/config/: load.py  materials.py  schemas.py
src/ngimager/filters/: shapers.py  to_typed_events.py
src/ngimager/geometry/: plane.py
src/ngimager/imaging/: sbp.py
src/ngimager/io/: adapters.py  canonicalize.py  lm_store.py  lut.py
src/ngimager/physics/: cones.py  energy_strategies.py  events.py  hits.py  kinematics.py  priors.py
src/ngimager/pipelines/: core.py  fastmode.py  (+1 more)
tests/: test_hdf5_roundtrip.py  test_phits_usrdef_ragged.py  test_plane.py  test_shapers.py  test_typed_conversion.py
user/config/: index.html
user/hdf5/: index.html
user/quickstart/: index.html
(+36 files in other folders)
