[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ng-imager"
version = "0.1.0"
description = "Event-cone imaging (neutron & gamma ray) with fastmode and list-mode pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MPL-2.0"}
authors = [{name="Hunter Ratliff"}]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.10",
  "h5py>=3.10",
  "tqdm>=4.66",
  "pydantic>=2.6",
  "tomli>=2.0; python_version<'3.11'"  # stdlib tomllib on 3.11+
]

[project.optional-dependencies]
perf = [
  "numba>=0.59",
  "joblib>=1.4",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings>=0.24",
  "mkdocstrings-python>=1.10",
]

[tool.hatch.build]
include = [
  "src/ngimager/data/lut/**/*.npz",
  "src/ngimager/tools/generate_lut/*.py",
  "src/ngimager/tools/generate_lut/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ngimager"]

[project.urls]
Homepage = "https://github.com/lindt8/ng-imager"
Documentation = "https://lindt8.github.io/ng-imager/"
